# work_for_hw

./: Cargo.toml  Dockerfile  Dockerfile.build  Makefile  README.md  agg_stress_under_control.ipynb  agg_workload_multi_stress.ipynb  agg_workload_no_stress.ipynb  agg_workload_single_stress.ipynb  build.rs  go.mod  go.sum  libvirt_exporter.go  localbuild.Dockerfile  main.go  run_experiment.py  run_experiment_test.ipynb  single_workload_no_stress.ipynb
build_containers/: Dockerfile.buildenv
cmd/: root.go
collector/: kvm_stat_linux.go  resctrl_linux.go
collectors/: kvm_debug_stat_linux.go  kvm_debug_stat_linux_test.go  kvm_debug_stat_util.go  resctrl_linux.go  resctrl_linux_test.go
conf/: test_experiment.yaml
conf/redis/: redis_no_stress.yaml  redis_same_cpu.yaml  redis_same_numa.yaml  redis_same_thread.yaml
conf/stress/: stress_eligate.yaml  stress_normal.yaml  stress_same_cpu.yaml  stress_same_numa.yaml
decoder/: dname_test.go
examples/: syscall.bpf.c  syscall.yaml
master/: README.md  docker-compose.yaml
master/grafana/dashboards/vmmonitor/: all_in_one.json  app.json  host.json  vm.json
master/prometheus/: normal.yml  prometheus.yml
node/: README.md  docker-compose.yaml  node.sh
node/ebpfs/: syscall.yaml
src/bpf/: share_map.bpf.c  vmlinux.h
tools/: aggregation.py  aggregation_test.ipynb  analyze.py  analyze_test.ipynb  display.py  display_test.ipynb
tools/client/: config_parser.py  grafana.py  prometheus.py
tools/experiment/: executor.py  executor_test.ipynb  experiment.py  experiment_test.ipynb  generator.py  generator_test.ipynb
(+2 files in other folders)
